--- a/deployment/VL.SocketIO.nuspec
+++ b/deployment/VL.SocketIO.nuspec
@@ -17,7 +17,7 @@
     </dependencies>
   </metadata>
   <files>
-    <file src="..\*.vl" target="" exclude="" />
-    <file src="..\**\*.vl" target="" exclude="" />
+    <file src="..\VL.SocketIO.vl" target="" exclude="" />
+    <file src="..\help\*.vl" target="" exclude="" />
   </files>
 </package>
